--- a/about.html
+++ b/about.html
@@ -4,16 +4,8 @@ section-type: about
 title: About
 permalink: /abracadabra
 ---
-## About
+<center> <h2> About </h2>> </center>
 
-Github's Octocat was designed by Simon Oxley, alongside the white bird Twitter used (before they received a proper logo) as part of a usual routine of cranking out images for iStock. GitHub saw it, and wanted it, presumably under the notion that it can represent how complex code combines to create peculiar things, much like the octopuss... except the CEO of GitHub called it an octocat, and it has been the octocat since <a href="https://www.quora.com/GitHub/What-is-the-story-behind-GitHub%E2%80%99s-octocat-mascot" target="_blank">[via]</a>.
+Hello, my name is Jingyuan Zhu. I'm a Ph.D Pre-Candidate at Computer Science Engineering at University of Michigan, advised by [Prof. Harsha V. Madhyastha](https://web.eecs.umich.edu/~harshavm/) My research interest is in Network Systems.
 
-<small>
-Octocat is Github's logo and trademark and here is used to illustrate a fictional character (John Smith) that used the *{ Personal }* Jekyll Theme to build his website.
-</small>
-
-Support the repo by starring or forking it!
-
-<iframe src="https://ghbtns.com/github-btn.html?user=le4ker&repo=personal-jekyll-theme&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-
-<iframe src="https://ghbtns.com/github-btn.html?user=le4ker&repo=personal-jekyll-theme&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+Before studying as a Ph.D in Michigan, I received BSE from UM in CS in a dual degree with BSE from Shanghai JiaoTong University in ECE
