ready for hw again

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ section-type: about
 title: About
 permalink: /abracadabra
 ---
-<center> <h2> About </h2>> </center>
+<center> <h2> About </h2> </center>
 
 Hello, my name is Jingyuan Zhu. I'm a Ph.D Pre-Candidate at Computer Science Engineering at University of Michigan, advised by [Prof. Harsha V. Madhyastha](https://web.eecs.umich.edu/~harshavm/) My research interest is in Network Systems.
 
