--- a/latest-post.html
+++ b/latest-post.html
@@ -3,3 +3,4 @@ section-type: latest-post
 title: Blog
 ---
 ## Latest Blog Post
+<h4 class="text-left" style="text-transform: capitalize;"> Here are some of my latest posts: </h4>
